# libpasta

./: .travis.yml  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: ci.yml
benches/: bench.rs
dev/bench/: data.js
examples/: alternate_key_source.rs  config.rs  config_hmac.rs  hash_password.rs  migrate_password.rs  verify_password.rs
libpasta-capi/: Cargo.toml  build.rs
libpasta-capi/ctest/: compile  compile.sh  test  test.c  test.cpp
libpasta-capi/include/: pasta-bindings.h  pasta-bindings.hpp  pasta.h
libpasta-capi/src/: lib.rs
src/: bench.rs  config.rs  lib.rs  sod.rs
src/hashing/: de.rs  mod.rs  ser.rs
src/key/: mod.rs
src/primitives/: argon2.rs  bcrypt.rs  hmac.rs  mod.rs  pbkdf2.rs  scrypt.rs  sod.rs
tests/: .libpasta.yaml  test_argon2.rs  test_bcrypt.rs  test_from_file.rs  test_hmac.rs  test_pbkdf2.rs  test_ringpbkdf2.rs  test_scrypt.rs
tests/common/: mod.rs
