[package]
name = "libpasta"
version = "0.1.0"
authors = ["Sam Scott <me@samjs.co.uk>"]
categories = ["authentication", "cryptography"]
description = "All-inclusive password hashing library"
documentation = "https://docs.rs/libpasta"
license = "MIT"
readme = "README.md"
repository = "https://github.com/libpasta/libpasta"

[dependencies]
argon2rs = "0.2.5"
data-encoding = "2.1.2"
error-chain = "0.12.0"
lazy_static = "1.2.0"
log = "0.4.6"
num-traits = "0.2.6"
rpassword = "2.1.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.85", features = ["serde_derive"]}
serde_mcf = "0.1.3"
serde_yaml = "0.8.8"
scrypt = "0.2.0"

[dependencies.ring]
version = "0.14.2"
default-features = false
features = ["use_heap"]

[dev-dependencies]
cargon = "0.0.1"
env_logger = "0.6.0"
time = "0.1.42"

[features]
bench = []
long_tests = []
simd = ["argon2rs/simd"]

[profile.debug]
opt-level = 2

[profile.test]
opt-level = 2