[package]
name = "libpasta"
version = "0.1.0"
authors = ["Sam Scott <me@samjs.co.uk>"]
categories = ["authentication", "cryptography"]
description = "All-inclusive password hashing library"
documentation = "https://docs.rs/libpasta"
license = "MIT"
readme = "README.md"
repository = "https://github.com/libpasta/libpasta"

[dependencies]
argon2rs = "0.2.5"
data-encoding = "2.3.1"
error-chain = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.11"
num-traits = "0.2.14"
rpassword = "5.0.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.117", features = ["serde_derive"] }
serde_mcf = "0.1.3"
serde_yaml = "0.8.14"
scrypt = "0.5.0"

[dependencies.ring]
version = "0.16.16"
default-features = false
features = ["std"]

[dev-dependencies]
cargon = "0.0.1"
env_logger = "0.8.2"
time = "0.1.42"

[features]
bench = []
long_tests = []
simd = ["argon2rs/simd"]

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2
