[package]
name = "libpasta"
version = "0.1.2"
authors = ["Sam Scott <me@samjs.co.uk>"]
categories = ["authentication", "cryptography"]
description = "All-inclusive password hashing library"
documentation = "https://docs.rs/libpasta"
license = "MIT"
readme = "README.md"
repository = "https://github.com/libpasta/libpasta"
edition = "2015"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false


[dependencies]
argon2rs = "0.2.5"
data-encoding = "2.3.2"
error-chain = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.14"
num-traits = "0.2.14"
ring = { version = "0.16.20", default-features = false, features = ["std"] }
rpassword = "5.0.1"
bcrypt = "0.9.0"
serde = { version = "1.0.126", features = ["serde_derive"] }
serde_mcf = "0.1.3"
serde_yaml = "0.8.17"
scrypt = "0.7.0"

[dev-dependencies]
cargon = "0.0.1"
criterion = "0.3.4"
env_logger = "0.8.3"

[features]
bench = []
long_tests = []
simd = ["argon2rs/simd"]

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2
